[package]

name = "wasm_interpreter"
version = "0.0.1"
authors = [ "Alan Jeffrey <ajeffrey@mozilla.com>" ]

description = "Web Assembly interpreter library for Rust"
repository = "https://github.com/asajeffrey/wasm/wasm-interpreter"
readme = "README.md"
keywords = [ "wasm", "web assembly" ]
license = "MPL-2.0"

[dependencies]
wasm_ast = { version = "0.0.1", path = "../wasm-ast" }
