[package]
name = "wasm_typecheck"
version = "0.0.1"
authors = [ "Alan Jeffrey <ajeffrey@mozilla.com>" ]

description = "Web Assembly typechecking library for Rust"
repository = "https://github.com/asajeffrey/wasm/wasm-typecheck"
readme = "README.md"
keywords = [ "wasm", "web assembly" ]
license = "MPL-2.0"

[dependencies]
wasm_ast = { version = "0.0.1", path = "../wasm-ast" }
