[package]

name = "wasm"
version = "0.0.1"
authors = [ "Alan Jeffrey <ajeffrey@mozilla.com>" ]

description = "Web Assembly tools libraries for Rust"
repository = "https://github.com/asajeffrey/wasm"
readme = "README.md"
keywords = [ "wasm", "web assembly" ]
license = "MPL-2.0"

[dependencies]
parsell = "0.6.5"
wasm_ast = { version = "0.0.1", path = "../wasm-ast" }
wasm_sexpr = { version = "0.0.1", path = "../wasm-sexpr" }
wasm_interpreter = { version = "0.0.1", path = "../wasm-interpreter" }
